sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:9: error: type mismatch;
 found   : Int
 required: Boolean
	while(incValue)
              ^